--- a/pacientes/src/main/resources/application.properties
+++ b/pacientes/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Hospital_Cruz_de
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
